2015-01-26 Added Show Answers to Text Identification module
2015-01-26 TextAudio supports play vocabulary from one merged audio file
2015-01-23 Added Show Answers to Connecting Dots module
2015-01-23 Fixed issue with Hide and Stand Area in IWB Toolbar
2015-01-23 Fixed issue with backward compatibility in IWB Toolbar module
2015-01-22 Added Show Answers to Magic Boxes module
2015-01-22 Added Show Answers to Shape Tracing module
2015-01-22 Changed visibility of drawing in IWB Toolbar module
2015-01-20 Added translations of addons properties names
2015-01-20 Fixed issue with ignore punctuation and accented letters in Text module
2015-01-19 Added translations of addons names
2015-01-16 Added show and hide commands to Ordering module
2015-01-16 Fixed sending multiple events after reset and coloring fields in Coloring module
2015-01-16 Moved zoom library code outside IWB Toolbar module
2015-01-14 Added new property Custom Display to eKeyboard module
2015-01-13 Updated Google Swiffy library to ver. 7.1
2015-01-13 Added show and hide commands to SVG module
2015-01-12 Added ability to choose starting point of presentation in Slideshow module
2015-01-12 Fixed double click effect on mobile devices in IWB Toolbar module
2015-01-09 Fixed Stand and Hide Area functions on mobile devices in IWB Toolbar module
2015-01-08 Fixed notes on mobile devices in IWB Toolbar module
2015-01-08 Added ShowAnswers to Fractions module
2015-01-08 Added ShowAnswers to Clock module
2015-01-07 Adapted tests to current module version in Video module
2015-01-07 Fixed issue with removing class disable on switching to work mode in TrueFalse module
2015-01-07 Adapted tests to current module version in Animated Lesson Progress module
2015-01-02 Adapted tests to current module version in LearnPen Data module
2015-01-02 Adapted tests to current module version in Custom Scoring module
2015-01-02 Adapted tests to current module version in Image Viewer module